<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:gravity="bottom"
            android:background="@drawable/side_nav_bar"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/nav_header_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_user_icon2"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/nav_header_name"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_header_image"
                style="@style/TextLarge"/>

            <TextView
                android:textColor="@color/white"
                android:id="@+id/nav_header_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Ahhh"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nav_header_name"
                style="@style/TextRegular"/>

            <FrameLayout
                android:background="@drawable/bg_role_header"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/nav_header_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ABC building"
                    style="@style/Text.Medium"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null"
            android:id="@+id/navigation_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:orientation="vertical">

            <!---my profile-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/navigation_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/lock_reset"
                    android:scaleType="centerInside"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/navigation_title"
                    android:layout_width="0dp"
                    android:layout_height="35sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Modifier le mot de passe"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_arrow"
                    app:layout_constraintStart_toEndOf="@+id/navigation_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Text.Medium"/>
                <ImageView
                    android:id="@+id/img_arrow"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_next"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <FrameLayout
                    android:id="@+id/line"
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!---my profile-->



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <android.widget.Button
                android:id="@+id/btn_logout"
                android:background="@drawable/button_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/logout"
                android:layout_marginHorizontal="20dp"
                style="@style/Button.Light"/>
            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_point_of_sales"
                style="@style/TextRegular"/>
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/app_version"
                style="@style/Text.Small"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
