<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="230dp"
                android:layout_height="80dp"
                android:src="@drawable/kanuni"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:id="@+id/head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Se connecter"
                android:includeFontPadding="false"
                style="@style/TextLarge"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:textColor="#5b5b5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Veuillez entrer votre e-mail et mot de passe"
                android:includeFontPadding="false"
                android:layout_below="@+id/head"
                style="@style/TextRegular"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:boxCornerRadiusTopStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_forgot_password"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/centurygothic_bold"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/continueBtn"
                        android:background="@drawable/primary_buttons_square"
                        android:layout_height="45dp"
                        android:layout_width="match_parent"
                        android:text="Connexion"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/filledButtonStyle"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/loadingCartGif"
                        android:background="@color/thirtyPercentTransparent"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:layout_constraintBottom_toBottomOf="@+id/continueBtn"
                        app:layout_constraintEnd_toEndOf="@+id/continueBtn"
                        app:layout_constraintStart_toStartOf="@+id/continueBtn"
                        app:layout_constraintTop_toTopOf="@+id/continueBtn">
                        <ProgressBar
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:progressTint="@color/white"
                            android:progressBackgroundTint="@color/white"
                            android:indeterminateTint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/or"
                android:layout_marginHorizontal="20dp"
                style="@style/TextRegular"/>
            <androidx.cardview.widget.CardView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:id="@+id/btn_sign_in_with_google"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Button.Light">

                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/primary"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Créer un compte"
                        android:fontFamily="@font/franklingothic_demi"
                        android:textAlignment="center"
                        android:layout_marginEnd="16dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
